crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_mixed_text_static_and_if_children_preserves_template_shape.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { child as _child, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<em class=\"weekend-label\">Weekend</em>", true)
const t1 = _template("<span>  <em class=\"day-offset\">same day</em></span>", true)
export function render(_ctx) {
const n2 = t1()
const n0 = _child(n2)
_setInsertionState(n2, null, 2)
const n1 = _createIf(() => (_ctx.isWeekend), () => {
const n4 = t0()
return n4
})
_renderEffect(() => {
_setClass(n2, ["date-line", { weekend: _ctx.isWeekend }])
_setText(n0, _toDisplayString(_ctx.dateLabel) + " ")
})
return n2
}
