crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_nested_control_flow_avoids_unused_root_insertion_state.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { setInsertionState as _setInsertionState, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<span>a</span>")
const t1 = _template("<i>b</i>")
const t2 = _template("<section></section>", true)
const t3 = _template("<div></div>", true)
export function render(_ctx) {
const n1 = t3()
_setInsertionState(n1, null, 0)
const n0 = _createIf(() => (_ctx.ok), () => {
const n5 = t2()
_setInsertionState(n5, null, 0)
const n3 = _createIf(() => (_ctx.inner), () => {
const n7 = t0()
return n7
})
_setInsertionState(n5, null, 1)
const n4 = _createIf(() => (_ctx.more), () => {
const n9 = t1()
return n9
})
return n5
})
return n1
}
