crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_nested_slot_outlet_child.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { createSlot as _createSlot, setInsertionState as _setInsertionState, template as _template } from 'vue';
const t0 = _template("<div></div>", true)
export function render(_ctx) {
const n1 = t0()
_setInsertionState(n1, null, 0)
const n0 = _createSlot("default", { row: () => (_ctx.item), index: () => (_ctx.i) })
return n1
}
