crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_separated_dynamic_text_uses_direct_child_ref.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { child as _child, next as _next, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div><span></span> </div>", true)
export function render(_ctx) {
const n1 = t0()
const n0 = _next(_child(n1), 1)
_renderEffect(() => _setText(n0, _toDisplayString(_ctx.value)))
return n1
}
