crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_v_for_aliases_in_complex_expressions.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, createInvoker as _createInvoker, delegateEvents as _delegateEvents, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createFor as _createFor, template as _template } from 'vue';
const t0 = _template("<li> </li>")
const t1 = _template("<ul></ul>", true)
_delegateEvents("click")
export function render(_ctx) {
const n1 = t1()
_setInsertionState(n1)
const n0 = _createFor(() => (_ctx.items), (_for_item0) => {
const n3 = t0()
const x3 = _txt(n3)
n3.$evtclick = _createInvoker(() => (_ctx.pick(_for_item0.value.id)))
_renderEffect(() => {
_setClass(n3, ['row', { active: _ctx.selected.has(_for_item0.value.id) }, `kind-${_for_item0.value.kind}`])
_setText(x3, _toDisplayString(_for_item0.value.name))
})
return n3
})
return n1
}
